<resources>
    <string name="app_name">Bhojaji Maharaj Gas Agency</string>
    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Pets</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_pet">Add a Pet</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Info</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_gender">Gender</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_village_name">Village Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_breed">Name</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_weight">Weight</string>

    <!-- Units for weight of the pet (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_pet_weight">kg</string>

    <!-- Label for dropdown menu option if the pet's gender is unknown [CHAR LIMIT=20] -->
    <string name="gender_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the pet is male [CHAR LIMIT=20] -->
    <string name="gender_male">Male</string>

    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="gender_Allipur">Allipur</string>

    <string name="gender_Shirud">Shirud</string>

    <!-- Label for dropdown menu option if the pet is male [CHAR LIMIT=20] -->
    <string name="gender_Pawani">Pawani</string>

    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="gender_female">Female</string>

    <string name="category_village">Village Name</string>
    <string name="place_order">Place Order</string>
    <string name="plese_enter_consumer_number">Plese Enter Consumer Number</string>
    <string name="number">Number</string>
    <string name="login">Login</string>
    <string name="hi">Hi,</string>
    <string name="order_cylinder">Order Cylinder</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="track_order">Track Order</string>
    <string name="order_status">Order Status:</string>
    <string name="expected_delivery_date">Expected Delivery Date:</string>

</resources>
