<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:layout_margin="16dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Kalpana Katkar"
        android:layout_margin="16dp"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <TextView
            android:id="@+id/order"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:text="@string/order_cylinder"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_track_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/track_order"
        android:layout_above="@+id/button_previous_order"
        android:textSize="25sp"
        android:layout_marginBottom="15dp"
        />



    <Button
        android:id="@+id/button_previous_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/previous_orders"
        android:layout_alignParentBottom="true"
        android:textSize="25sp"
        android:layout_marginBottom="15dp"
        />


</RelativeLayout>

</LinearLayout>